# json-to-tables

./: .gitignore  Cargo.toml  format_test_expected.py
src/: consumer_files.rs  consumer_json.rs  lib.rs  parser.rs  read.rs
src/database/: database_csv.rs  database_json.rs  database_stdout.rs  mod.rs  schema.rs
src/parallel/: mod.rs
src/parser/: mod.rs  models.rs
src/yajlish/: common.rs  mod.rs
tests/: test.rs
tests/resources/: bookstore-in-expected.json  bookstore-in.json  empty-in-expected.json  empty-nested-list-in-expected.json  empty-nested-list-in.json  empty_list-in-expected.json  empty_object_in_list-in-expected.json  empty_object_in_list-in.json  integration-in-expected.json  integration-in.json  just-value-in-expected.json  list-empty-dicts-in-expected.json  mixed-types-in-expected.json  mixed-types-in.json  pyramids-in-expected.json  pyramids-in.json  stations-in-expected.json  stations-in.json  xbus-in-expected.json  xbus-in.json
