[package]
name = "json-to-tables"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
regex = "1.5"
lazy_static = "*"
structopt = "*"
cached = "*"
glob = "*"
json-tools = "*"

[dev-dependencies]
rstest = "*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3