[package]
name = "json-to-tables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "*", features = ["arbitrary_precision"] }
regex = "*"
lazy_static = "*"
structopt = "*"
glob = "*"
json-tools = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
rstest = "*"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3